--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "22.x",
     "npm": "10.x"
   },
-  "version": "3.2.1-snapshot.2",
+  "version": "3.2.1",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
