--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
       "bucket": "file-upload-app.allencell.org",
       "region": "us-west-2"
     },
-    "productName": "File Upload App",
     "win": {
       "target": "portable"
     }
@@ -37,7 +36,7 @@
     "dev": "node scripts/start-dev.js",
     "compile": "webpack --config webpack/webpack.main.config.js && webpack --config webpack/webpack.renderer.config.js",
     "compile-prod": "webpack --config webpack/webpack.main.config.js --env production && webpack --config webpack/webpack.renderer.config.js --env production",
-    "build-executable": "npm run compile && npx electron-builder",
+    "build-executable": "npm run compile-prod && npx electron-builder",
     "dist": "electron-builder -p always",
     "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
