--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "version": "3.2.2-snapshot.0",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
+    "artifactName": "${productName}-${version}.${ext}",
     "files": [
       "dist/**/*",
       "node_modules/**/*",
