--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "bucket": "file-upload-app.allencell.org",
       "region": "us-west-2"
     },
+    "productName": "File Upload App",
     "win": {
       "target": "portable"
     }
