--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "uuid": "~8.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.8",
     "@types/chai": "~4.3.0",
     "@types/chai-as-promised": "~7.1.4",
     "@types/enzyme": "~3.10.11",
@@ -125,6 +126,7 @@
     "@typescript-eslint/eslint-plugin": "~5.9.0",
     "@typescript-eslint/parser": "~5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
+    "babel-loader": "^8.2.3",
     "chai": "~4.3.4",
     "classnames": "~2.3.1",
     "clean-webpack-plugin": "4.x",
