--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "inlineSources": true,
     "sourceMap": true,
 
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
 
