--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "axios": "~0.24.0",
     "axios-retry": "~3.2.4",
     "chai-as-promised": "~7.1.1",
-    "electron-devtools-installer": "~3.2.0",
+    "electron-devtools-installer": "^4.0.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
     "file-loader": "^6.0.0",
@@ -131,8 +131,8 @@
     "clean-webpack-plugin": "4.x",
     "cross-env": "~7.0.3",
     "css-loader": "7.x",
-    "electron": "~16.0.6",
-    "electron-builder": "~23.0.2",
+    "electron": "^33.3.1",
+    "electron-builder": "^25.1.8",
     "enzyme": "~3.11.0",
     "eslint": "~8.6.0",
     "eslint-config-prettier": "~8.3.0",
