--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "22.x",
     "npm": "10.x"
   },
-  "version": "3.3.2",
+  "version": "3.3.3-snapshot.0",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "artifactName": "file-upload-app-${version}.${ext}",
