--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/",
     "postinstall": "npm run compile",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,less,scss,json,md}\""
   },
   "repository": {
     "type": "git",
