--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dist": "electron-builder -p always",
     "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint --fix src --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/",
     "postinstall": "npm run compile",
     "prepare": "husky install"
@@ -171,7 +172,10 @@
     "webpack-dev-server": "5.x"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "eslint --cache --fix"
+    "*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   },
   "config": {
     "networkTimeout": 180000
